fix: changed 'Check' to 'Calculate' button

--- a/area.html
+++ b/area.html
@@ -62,7 +62,7 @@
         </div>
       </div>
       <div class="btn-container">
-        <button class="btn" data-btn="check">Check</button>
+        <button class="btn" data-btn="calculate">Calculate</button>
         <button class="btn" data-btn="clear">Clear</button>
       </div>
 
