--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
 
+    <link rel="shortcut icon" href="./triangle.png" type="image/x-icon" />
+
     <title>Fun with Triangles || Is Triangle?</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
