fix: added active-link to class attribute

--- a/area.html
+++ b/area.html
@@ -27,7 +27,7 @@
             <li><a href="./quiz.html" class="nav-link">quiz</a></li>
             <li><a href="./hypotenuse.html" class="nav-link">hypotenuse</a></li>
             <li>
-              <a href="./area.html active-link" class="nav-link"
+              <a href="./area.html" class="nav-link active-link"
                 >area of triangle</a
               >
             </li>
