fix: fixed title of every page, removed alerts

--- a/area.html
+++ b/area.html
@@ -8,9 +8,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
-    <!-- favicon -->
-    <!-- <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" /> -->
-    <title>Fun with Triangles || Area of triangle</title>
+
+    <title>Area of triangle || Fun with Triangles</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./area.js" defer></script>
@@ -34,7 +33,6 @@
           </ul>
         </nav>
       </div>
-      <div class="alert"></div>
     </header>
 
     <div class="content">
