--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -10,7 +10,7 @@
     />
     <!-- favicon -->
     <!-- <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" /> -->
-    <title>Fun with Triangles || Hypotenuse</title>
+    <title>Hypotenuse || Fun with Triangles</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./hypotenuse.js" defer></script>
@@ -34,7 +34,6 @@
           </ul>
         </nav>
       </div>
-      <div class="alert"></div>
     </header>
 
     <div class="content">
