--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" href="./triangle.png" type="image/x-icon" />
 
-    <title>Fun with Triangles || Is Triangle?</title>
+    <title>Is Triangle? || Fun with Triangles</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./index.js" defer></script>
@@ -33,7 +33,6 @@
           </ul>
         </nav>
       </div>
-      <div class="alert"></div>
     </header>
 
     <div class="content">
