--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
     />
     <!-- favicon -->
     <!-- <link rel="shortcut icon" href="./favicon.png" type="image/x-icon" /> -->
-    <title>Fun with Triangles || Quiz</title>
+    <title>Quiz || Fun with Triangles</title>
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./quiz.js" defer></script>
@@ -30,7 +30,6 @@
           </ul>
         </nav>
       </div>
-      <div class="alert"></div>
     </header>
 
     <form class="section quiz-section">
